yonetici panel eklendi

--- a/src/web/index.xhtml
+++ b/src/web/index.xhtml
@@ -6,7 +6,7 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <h:commandButton action="/panel/yonetici" value="Yonetici"/>
     </h:body>
 </html>
 
