index magaza baglantısı yapıldı

--- a/src/web/index.xhtml
+++ b/src/web/index.xhtml
@@ -7,6 +7,8 @@
     </h:head>
     <h:body>
         <h:commandButton action="/panel/yonetici" value="Yonetici"/>
+        <h:commandButton action="/panel/magaza" value="Magaza"/>
+
     </h:body>
 </html>
 
