panel uyeler yapıldı

--- a/src/web/index.xhtml
+++ b/src/web/index.xhtml
@@ -8,6 +8,7 @@
     <h:body>
         <h:commandButton action="/panel/yonetici" value="Yonetici"/>
         <h:commandButton action="/panel/magaza" value="Magaza"/>
+        <h:commandButton action="/panel/uyeler" value="Uyeler"/>
 
     </h:body>
 </html>
