musterihiz panel yaptım

--- a/src/web/index.xhtml
+++ b/src/web/index.xhtml
@@ -8,7 +8,11 @@
     <h:body>
         <h:commandButton action="/panel/yonetici" value="Yonetici"/>
         <h:commandButton action="/panel/magaza" value="Magaza"/>
+        <h:commandButton action="/panel/mushiz" value="MusteriHizmet"/>
+        <h:commandButton action="/panel/kampanya" value="Kampanya"/>
         <h:commandButton action="/panel/uyeler" value="Uyeler"/>
+        
+        
 
     </h:body>
 </html>
