--- a/src/web/index.xhtml
+++ b/src/web/index.xhtml
@@ -6,6 +6,7 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
+        <h:commandButton action="/panel/kategori" value="Kategori"/>
         <h:commandButton action="/panel/stok" value="Stok"/>
         <h:commandButton action="/panel/yonetici" value="Yonetici"/>
         <h:commandButton action="/panel/magaza" value="Magaza"/>
