panel urunler aşaması yapıldı

--- a/src/web/index.xhtml
+++ b/src/web/index.xhtml
@@ -12,6 +12,7 @@
         <h:commandButton action="/panel/magaza" value="Magaza"/>
         <h:commandButton action="/panel/mushiz" value="MusteriHizmet"/>
         <h:commandButton action="/panel/kampanya" value="Kampanya"/>
+        <h:commandButton action="/panel/urunler" value="Urunler"/>
         <h:commandButton action="/panel/uyeler" value="Uyeler"/>
         
         
