--- a/src/web/index.xhtml
+++ b/src/web/index.xhtml
@@ -6,16 +6,17 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h:commandButton action="/panel/kategori" value="Kategori"/>
-        <h:commandButton action="/panel/stok" value="Stok"/>
-        <h:commandButton action="/panel/yonetici" value="Yonetici"/>
-        <h:commandButton action="/panel/magaza" value="Magaza"/>
-        <h:commandButton action="/panel/mushiz" value="MusteriHizmet"/>
-        <h:commandButton action="/panel/kampanya" value="Kampanya"/>
-        <h:commandButton action="/panel/urunler" value="Urunler"/>
-        <h:commandButton action="/panel/uyeler" value="Uyeler"/>
-        
-        
+        <h:form>
+            <h:commandButton action="/panel/kategori" value="Kategori"/>
+            <h:commandButton action="/panel/stok" value="Stok"/>
+            <h:commandButton action="/panel/yonetici" value="Yonetici"/>
+            <h:commandButton action="/panel/magaza" value="Magaza"/>
+            <h:commandButton action="/panel/mushiz" value="MusteriHizmet"/>
+            <h:commandButton action="/panel/kampanya" value="Kampanya"/>
+            <h:commandButton action="/panel/urunler" value="Urunler"/>
+            <h:commandButton action="/panel/uyeler" value="Uyeler"/>
+        </h:form>
+
 
     </h:body>
 </html>
