--- a/src/web/panel/kategori.xhtml
+++ b/src/web/panel/kategori.xhtml
@@ -8,18 +8,30 @@
     </h:head>
     <h:body>
         <h:form>
-            <h:commandButton action="/index" value="Home"/>         
+            <h:commandButton action="/private" value="geri"/>         
         </h:form>
         <hr></hr>
         <h3>Kategori Listesi</h3>
-        <h:form>
+        <h:form id="kategori-form">
             Kategori İsmi:<h:inputText value="#{kategoriBean.entity.kategoriAd}"/><br/>
-            <h:commandButton rendered="#{kategoriBean.entity.id==0}" action="#{kategoriBean.create()}" value="Create"/>
-            <h:commandButton rendered="#{kategoriBean.entity.id!=0}" action="#{kategoriBean.update()}" value="Update"/>
-            <h:commandButton rendered="#{kategoriBean.entity.id!=0}" action="#{kategoriBean.clear()}" value="Clear"/>
+            <h:commandButton rendered="#{kategoriBean.entity.id==0}" action="#{kategoriBean.create()}" value="Create">
+                <f:ajax execute="kategori-form" render="kategori-form kategori-table"/>
+            </h:commandButton>
+            <h:commandButton rendered="#{kategoriBean.entity.id!=0}" action="#{kategoriBean.update()}" value="Update">
+                <f:ajax execute="kategori-form" render="kategori-form kategori-table"/>
+            </h:commandButton>
+            <h:commandButton rendered="#{kategoriBean.entity.id!=0}" action="#{kategoriBean.clear()}" value="Clear">
+                <f:ajax execute="@this" render="kategori-form"/>
+            </h:commandButton>
         </h:form>
         <hr />
-        <h:form>
+        <h:form id="kategori-table">
+              <pre>Page #{kategoriBean.page} of #{kategoriBean.pageCount}</pre>
+            <div class="btn-group">
+                <h:commandButton action="#{kategoriBean.previous()}" value="Previous"/>
+                <h:commandButton action="#{kategoriBean.next()}" value="Next"/><br/><br/>
+
+            </div>
             <h:dataTable border="1" value="#{kategoriBean.list}" var="entity">
                 <h:column>
                     <f:facet name="header">ID</f:facet>
@@ -30,11 +42,15 @@
                     <f:facet name="header">KategoriAd</f:facet>
                         #{entity.kategoriAd}
                 </h:column>
-                
+
                 <h:column>
                     <f:facet name="header">DÜZENLEMELER</f:facet>
-                    <h:commandButton action="#{kategoriBean.delete(entity)}" value="SİL"/>
-                    <h:commandButton action="#{kategoriBean.setEntity(entity)}" value="Güncelle"/>
+                    <h:commandButton action="#{kategoriBean.delete(entity)}" value="SİL">
+                        <f:ajax execute="kategori-form" render="kategori-form kategori-table"/>
+                    </h:commandButton>
+                    <h:commandButton action="#{kategoriBean.setEntity(entity)}" value="Güncelle">
+                        <f:ajax execute="kategori-form" render="kategori-form kategori-table"/>
+                    </h:commandButton>
                 </h:column>
 
             </h:dataTable>
