--- a/src/web/panel/magaza.xhtml
+++ b/src/web/panel/magaza.xhtml
@@ -7,75 +7,84 @@
                 template="/template.xhtml">
 
     <ui:define name="content">
+        <div class="row">
+            <div class="col">
+                <h:form id="magaza-form">
 
-        <h:form id="magaza-form">
+                    <h:commandButton action="/private" value="geri"/> <br/><br/>
+                    <div class="container mb-3">
+                        <label class="form-label">MAĞAZA</label><br/><br/><br/>
+                        <label class="form-label">Yöneticiler</label>
+                        <h:selectOneMenu styleClass="form-select" value="#{magazaBean.entity.yonetici}" converter="yoneticiConverter">
+                            <f:selectItems value="#{yoneticiBean.list}" var="c" itemValue="#{c}" itemLabel="#{c.adSoyad}"/>
+                        </h:selectOneMenu>
+                    </div>
+                    <br/>
+                    <div class="container mb-3">
+                        <label class="form-label">MAĞAZA ADI</label> 
+                        <h:inputText  styleClass="form-control" value="#{magazaBean.entity.ad}"/><br/>
+                    </div>
+                    <div class="container mb-3">
+                        <label class="form-label">MAĞAZA ADRESİ</label> 
+                        <h:inputTextarea styleClass="form-control" rows="5" cols="50" value="#{magazaBean.entity.adres}"/><br/>
+                    </div>
+                    <div class="container mb-3">
+                        <h:commandButton styleClass="btn btn-success" rendered="#{magazaBean.entity.id==0}" action="#{magazaBean.create()}" value="Create">
+                            <f:ajax execute="magaza-form" render="magaza-form magaza-table"/>
+                        </h:commandButton>
+                        <h:commandButton styleClass="btn btn-primary" rendered="#{magazaBean.entity.id!=0}" action="#{magazaBean.update()}" value="Update">
+                            <f:ajax execute="magaza-form" render="magaza-form magaza-table"/>
+                        </h:commandButton>
+                        <h:commandButton styleClass="btn btn-secondary" rendered="#{magazaBean.entity.id!=0}" action="#{magazaBean.clear()}" value="Clear">
+                            <f:ajax execute="@this" render="magaza-form "/>
+                        </h:commandButton>
+                    </div>
+                </h:form>
+                <hr />
+            </div>
+            <div class="col">
+                <h:form id="magaza-table">
+                    <pre>Page #{magazaBean.page} of #{magazaBean.pageCount}</pre>
+                    <div class="btn-group">
+                        <h:commandButton action="#{magazaBean.previous()}" value="Previous">
+                                <f:ajax execute="magaza-form" render="magaza-form magaza-table"/>
+                            </h:commandButton>
+                        <h:commandButton action="#{magazaBean.next()}" value="Next">
+                                <f:ajax execute="magaza-form" render="magaza-form magaza-table"/>
+                            </h:commandButton><br/><br/>
 
-            <h:commandButton action="/private" value="geri"/> <br/><br/>
-            <div class="container mb-3">
-                <label class="form-label">MAĞAZA</label><br/><br/><br/>
-                <label class="form-label">Yöneticiler</label>
-                <h:selectOneMenu styleClass="form-select" value="#{magazaBean.entity.yonetici}" converter="yoneticiConverter">
-                    <f:selectItems value="#{yoneticiBean.list}" var="c" itemValue="#{c}" itemLabel="#{c.adSoyad}"/>
-                </h:selectOneMenu>
-            </div>
-            <br/>
-            <div class="container mb-3">
-                <label class="form-label">MAĞAZA ADI</label> 
-                <h:inputText  styleClass="form-control" value="#{magazaBean.entity.ad}"/><br/>
-            </div>
-            <div class="container mb-3">
-                <label class="form-label">MAĞAZA ADRESİ</label> 
-                <h:inputTextarea styleClass="form-control" rows="5" cols="50" value="#{magazaBean.entity.adres}"/><br/>
-            </div>
-            <div class="container mb-3">
-                <h:commandButton styleClass="btn btn-success" rendered="#{magazaBean.entity.id==0}" action="#{magazaBean.create()}" value="Create">
-                    <f:ajax execute="magaza-form" render="magaza-form magaza-table"/>
-                </h:commandButton>
-                <h:commandButton styleClass="btn btn-primary" rendered="#{magazaBean.entity.id!=0}" action="#{magazaBean.update()}" value="Update">
-                    <f:ajax execute="magaza-form" render="magaza-form magaza-table"/>
-                </h:commandButton>
-                <h:commandButton styleClass="btn btn-secondary" rendered="#{magazaBean.entity.id!=0}" action="#{magazaBean.clear()}" value="Clear">
-                    <f:ajax execute="@this" render="magaza-form "/>
-                </h:commandButton>
-            </div>
-        </h:form>
-        <hr />
-        <h:form id="magaza-table">
-              <pre>Page #{magazaBean.page} of #{magazaBean.pageCount}</pre>
-            <div class="btn-group">
-                <h:commandButton action="#{magazaBean.previous()}" value="Previous"/>
-                <h:commandButton action="#{magazaBean.next()}" value="Next"/><br/><br/>
+                    </div>
+                    <h:dataTable styleClass="table table-striped table-hover" value="#{magazaBean.list}" var="entity">
+                        <h:column>
+                            <f:facet name="header">ID</f:facet>
+                                #{entity.id}
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">YONETİCİ</f:facet>
+                                #{entity.yonetici.adSoyad}
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">AD</f:facet>
+                                #{entity.ad}
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">ADRES</f:facet>
+                                #{entity.adres}
+                        </h:column>
 
+                        <h:column>
+                            <f:facet name="header">DÜZENLEME</f:facet>
+                            <h:commandButton styleClass="btn btn-danger btn-sm" action="#{magazaBean.delete(entity)}" value="SİL">
+                                <f:ajax execute="magaza-form" render="magaza-form magaza-table"/>
+                            </h:commandButton>
+                            <h:commandButton styleClass="btn btn-primary btn-sm" action="#{magazaBean.setEntity(entity)}" value="Güncelle">
+                                <f:ajax execute="magaza-form" render="magaza-form magaza-table"/>
+                            </h:commandButton>
+                        </h:column>
+
+                    </h:dataTable>
+                </h:form>
             </div>
-            <h:dataTable styleClass="table table-striped table-hover" value="#{magazaBean.list}" var="entity">
-                <h:column>
-                    <f:facet name="header">ID</f:facet>
-                        #{entity.id}
-                </h:column>
-                <h:column>
-                    <f:facet name="header">YONETİCİ</f:facet>
-                        #{entity.yonetici.adSoyad}
-                </h:column>
-                <h:column>
-                    <f:facet name="header">AD</f:facet>
-                        #{entity.ad}
-                </h:column>
-                <h:column>
-                    <f:facet name="header">ADRES</f:facet>
-                        #{entity.adres}
-                </h:column>
-
-                <h:column>
-                    <f:facet name="header">DÜZENLEME</f:facet>
-                    <h:commandButton styleClass="btn btn-danger btn-sm" action="#{magazaBean.delete(entity)}" value="SİL">
-                        <f:ajax execute="magaza-form" render="magaza-form magaza-table"/>
-                    </h:commandButton>
-                    <h:commandButton styleClass="btn btn-primary btn-sm" action="#{magazaBean.setEntity(entity)}" value="Güncelle">
-                        <f:ajax execute="magaza-form" render="magaza-form magaza-table"/>
-                    </h:commandButton>
-                </h:column>
-
-            </h:dataTable>
-        </h:form>
+        </div>
     </ui:define>
 </ui:composition>
